[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyleak"
version = "1.0.0"
description = "API key leak validator — detect and verify leaked credentials across 12+ services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Lappy000"}
]
keywords = ["security", "api-keys", "leak", "validator", "credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
keyleak = "keyleak.cli:main"

[project.urls]
Homepage = "https://github.com/Lappy000/keyleak"
Repository = "https://github.com/Lappy000/keyleak"
Issues = "https://github.com/Lappy000/keyleak/issues"

[tool.setuptools.packages.find]
include = ["keyleak*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
